- 
    Bug 
- 
    Resolution: Done
- 
     Not Evaluated Not Evaluated
- 
    5.0.0
- 
    Windows 7
- 
        25949fb8527e5a7b11abe666b61f296d6b7170b6
Registering activeQt example servers fails with the following error message:
tmp\obj\debug_shared\simpleax.idl(163) : error MIDL2025 : syntax error : expecting ) near "p_rectangle" tmp\obj\debug_shared\simpleax.idl(198) : warning MIDL2214 : semantic check incomplete due to previous errors idc debug\simpleax.exe /tlb tmp\obj\debug_shared/simpleax.tlb Couldn't open tmp\obj\debug_shared\simpleax.tlb for read idc debug\simpleax.exe /regserver Failed to register server!
The line in question:
[id(53)] IPictureDisp* grab([in,optional] VARIANT /*was: struct*/ QRect p_rectangle);
Most likely the comment /was: struct/ is what is causing the problem.
- is required for
- 
                    QTBUG-24209 Qt 5.0 - Windows: Fix the QtActiveQt module -         
- Closed
 
-