Fix IDL generation for struct type optional parameters

A recently added optional QRect parameter for QWidget::grab()
caused a build failure in most ActiveQt examples.
Optional parameters apparently need to use VARIANT type in .idl file,
but the parameter replacement logic didn't account for struct keyword,
which is what QRect parameters get in earlier type conversion.

Fixed similarly to the enum case.

Note that QRect parameters don't seem to work at all even in 4.8,
so this is simply a compile fix at this point.

Task-number: QTBUG-25955
Change-Id: Ic1a2a2e69d5b9b34e4a2e1199275b961fe82d2c8
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@nokia.com>